WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90747
REGRESSION(
r121980
) Layout Test inspector/timeline/timeline-frames.html started to crash.
https://bugs.webkit.org/show_bug.cgi?id=90747
Summary
REGRESSION(r121980) Layout Test inspector/timeline/timeline-frames.html start...
Hayato Ito
Reported
2012-07-08 21:32:52 PDT
The following layout test started crash on Webkit Linux (dbg). inspector/timeline/timeline-frames.html
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=inspector%2Ftimeline%2Ftimeline-frames.html
Probable cause:
r121980
in
http://trac.webkit.org/log/?verbose=on&rev=121980&stop_rev=121978
.
Attachments
Patch
(3.15 KB, patch)
2012-07-09 05:10 PDT
,
Andrey Kosyakov
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hayato Ito
Comment 1
2012-07-08 21:39:17 PDT
I marked it CRASH on
http://trac.webkit.org/changeset/122083
.
Andrey Kosyakov
Comment 2
2012-07-09 05:10:33 PDT
Created
attachment 151234
[details]
Patch
Andrey Kosyakov
Comment 3
2012-07-09 06:36:34 PDT
Committed
r122105
: <
http://trac.webkit.org/changeset/122105
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug