REGRESSION(r121980) Layout Test inspector/timeline/timeline-frames.html started to crash. https://bugs.webkit.org/show_bug.cgi?id=90747

Reviewed by Pavel Feldman.

Source/WebCore:

- consider didCancelFrame() call normal if there is no pending frame, remove assertion;
- always set empty data object for frame records;

* inspector/InspectorTimelineAgent.cpp:
(WebCore::InspectorTimelineAgent::didCancelFrame):
(WebCore::InspectorTimelineAgent::commitFrameRecord):

LayoutTests:

- remove CRASH expectations for timeline-frames.html

* platform/chromium/TestExpectations:

Canonical link: https://commits.webkit.org/108617@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122105 268f45cc-cd09-0410-ab3c-d52691b4dbfc